# ocr-bot-with-chatgpt

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 67f37bbcd848_initial.py
ocrbot/: config.py
ocrbot/db/: database.py  models.py  pg_manager.py
ocrbot/filters/: is_admin.py
ocrbot/gpt4free/: completion.py
ocrbot/handlers/: __init__.py
ocrbot/handlers/admin/: admin_menu.py  get_len_users.py  user_messaging.py
ocrbot/handlers/start/: start.py  unexpected.py
ocrbot/handlers/user/: get_photo.py  own_text.py  send_text.py  shipping_to_chatgpt.py  show_prompt.py
ocrbot/keyboards/inline/admin_kbd/: send_message_all_users.py  send_message_type.py
ocrbot/keyboards/inline/user_kbd/: action_after_image_loading.py  choose_lang.py  send_own_text.py  show_text.py
ocrbot/keyboards/reply/admin_kbd/: admin_menu.py
ocrbot/keyboards/reply/user_kbd/: menu.py
ocrbot/redis_client/: client.py
ocrbot/services/: check_user_status.py  extracting_text.py
ocrbot/states/: states.py
