[tool.poetry]
name = "ocr-bot"
version = "0.1.0"
description = "A Telegram bot to extract text from image using python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
pydantic = "2.4.1"
sqlalchemy = "^1.3.24"
betterlogging = "^1.0.0"
python-dotenv = "^1.0.1"
cachetools = "^5.3.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
redis = "^5.0.2"
aioredis = "^2.0.1"
gino = "^1.0.1"
black = "^24.3.0"
undetected-chromedriver = "^3.5.5"
platformdirs = "^4.2.0"
g4f = {extras = ["all"], version = "^0.2.7.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
